--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "ES5",
-        "outDir": "./chapter1/sandbox.js",
-        "rootDir": "./chapter1/sandbox.ts"
+        "outDir": "./chapter1/objects.js",
+        "rootDir": "./chapter1/objects.ts"
     }
 }
